--- a/package.json
+++ b/package.json
@@ -34,13 +34,16 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/schematics": "^11.0.0",
+    "@nestjs/swagger": "^11.1.0",
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/pg": "^8.11.11",
     "@types/supertest": "^6.0.2",
+    "drizzle-kit": "^0.30.6",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
