fix: change docker hub repository name

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 env:
-  DOCKER_HUB_REPO: ${{ github.repository_owner }}/solo-nestjs-api
+  DOCKER_HUB_REPO: deveungi/sometimes-nestjs-api
   NODE_ENV: production
   PORT: 8044
 
