--- a/package.json
+++ b/package.json
@@ -17,18 +17,28 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "seed": "ts-node -r dotenv/config -r tsconfig-paths/register src/console.ts seed:users",
+    "seed:clear": "ts-node -r dotenv/config -r tsconfig-paths/register src/console.ts seed:users --clear",
+    "embedding:interest": "node -r dotenv/config -r ts-node/register -r tsconfig-paths/register src/console.ts generate:embeddings",
+    "embedding:interest:user": "node -r dotenv/config -r ts-node/register -r tsconfig-paths/register src/console.ts generate:embeddings -u",
+    "embedding:interest:option": "node -r dotenv/config -r ts-node/register -r tsconfig-paths/register src/console.ts generate:embeddings -o",
+    "embedding:profile": "node -r dotenv/config -r ts-node/register -r tsconfig-paths/register src/console.ts generate:profile-embeddings",
+    "embedding:profile:user": "node -r dotenv/config -r ts-node/register -r tsconfig-paths/register src/console.ts generate:profile-embeddings -u"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.782.0",
     "@aws-sdk/s3-request-presigner": "^3.782.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@qdrant/qdrant-js": "^1.13.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/cookie-parser": "^1.4.8",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -37,14 +47,18 @@
     "drizzle-orm": "^0.41.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "1.4.5-lts.2",
+    "nest-commander": "^3.17.0",
+    "openai": "^4.91.1",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "uuid": "^11.1.0",
     "uuidv7": "^1.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
+    "@faker-js/faker": "^9.6.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/schematics": "^11.0.0",
@@ -52,12 +66,14 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.10.7",
     "@types/pg": "^8.11.11",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.30.6",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
