--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@qdrant/qdrant-js": "^1.13.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/cookie-parser": "^1.4.8",
+    "@types/got": "^9.6.12",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
@@ -46,6 +47,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
+    "got": "^14.4.7",
     "jsonwebtoken": "^9.0.2",
     "multer": "1.4.5-lts.2",
     "nest-commander": "^3.17.0",
