--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@qdrant/qdrant-js": "^1.13.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/cookie-parser": "^1.4.8",
-    "@types/got": "^9.6.12",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
@@ -47,7 +47,6 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
-    "got": "^14.4.7",
     "jsonwebtoken": "^9.0.2",
     "multer": "1.4.5-lts.2",
     "nest-commander": "^3.17.0",
@@ -99,7 +98,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": ".",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
@@ -107,8 +106,15 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1",
+      "^@auth/(.*)$": "<rootDir>/src/auth/$1",
+      "^@common/(.*)$": "<rootDir>/src/common/$1",
+      "^@types/(.*)$": "<rootDir>/src/types/$1",
+      "^@database/(.*)$": "<rootDir>/src/database/$1"
+    }
   },
   "pnpm": {
     "ignoredBuiltDependencies": [
