--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^5.0.1",
+    "@nestjs/swagger": "^11.1.1",
+    "@portone/server-sdk": "^0.14.0",
     "@qdrant/qdrant-js": "^1.13.0",
     "@slack/web-api": "^7.9.1",
     "@types/bcryptjs": "^3.0.0",
@@ -66,7 +68,6 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/schematics": "^11.0.0",
-    "@nestjs/swagger": "^11.1.0",
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
