feat: 빌드환경을 위한 추가 환경설정

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,10 +8,16 @@ phases:
       - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.ap-northeast-2.amazonaws.com/sometimes-integration-api
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
+      - echo Installing dependencies...
+      - npm install -g pnpm
+      - pnpm install
 
   build:
     commands:
       - echo Build started on `date`
+      - echo Generating database migration scripts...
+      - chmod +x scripts/db-migrate-auto.sh
+      - ./scripts/db-migrate-auto.sh
       - echo Building the Docker image...
       - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
@@ -30,7 +36,9 @@ artifacts:
   files:
     - imagedefinitions.json
     - appspec.yaml
-  discard-paths: yes
+    - drizzle/**/*
+    - db-backups/**/*
+  discard-paths: no
 
 cache:
   paths:
