--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@types/pg": "^8.11.11",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
+    "coolsms-node-sdk": "^2.1.0",
     "drizzle-kit": "^0.30.6",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
