--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "db:generate": "drizzle-kit generate:pg",
     "db:push": "drizzle-kit push:pg",
     "db:studio": "drizzle-kit studio",
-    "db:drop": "drizzle-kit drop"
+    "db:drop": "drizzle-kit drop",
+    "migration:run": "ts-node -r dotenv/config -r tsconfig-paths/register src/database/run-migrations.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.782.0",
@@ -53,7 +54,9 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cache-manager": "^6.4.2",
+    "cache-manager-redis-store": "^3.0.1",
     "cacheable": "^1.8.10",
+    "ioredis": "^5.3.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
