--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e:watch": "jest --config ./test/jest-e2e.json --watch",
+    "test:e2e:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --config ./test/jest-e2e.json --runInBand",
+    "test:e2e:matching": "jest --config ./test/jest-e2e.json test/matching/matching.e2e-spec.ts",
     "seed": "ts-node -r dotenv/config -r tsconfig-paths/register src/console.ts seed:users",
     "seed:clear": "ts-node -r dotenv/config -r tsconfig-paths/register src/console.ts seed:users --clear",
     "embedding:interest": "node -r dotenv/config -r ts-node/register -r tsconfig-paths/register src/console.ts generate:embeddings",
