--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "nest start --host 0.0.0.0",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -61,7 +61,6 @@
     "cache-manager": "^6.4.2",
     "cache-manager-redis-store": "^3.0.1",
     "cacheable": "^1.8.10",
-    "ioredis": "^5.3.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
@@ -69,7 +68,9 @@
     "dayjs-plugin-utc": "^0.1.2",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "keyv": "^5.3.3",
     "multer": "1.4.5-lts.2",
     "nest-commander": "^3.17.0",
     "nodemailer": "^6.10.1",
