--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "nest-commander": "^3.17.0",
     "nodemailer": "^6.10.1",
     "openai": "^4.91.1",
+    "p-limit": "^6.2.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
